Compiler(failed)/parser.cpp
#include "parser.hpp"

TOKEN CurTok;
std::deque<TOKEN> tok_buffer;

#pragma region

// arg_list_prime ::= "," expr arg_list_prime | epsilon
void Arg_List_Prime(std::vector<std::unique_ptr<ExprAST>> &args)
{
	if (CurTok.type == RPAR)
	{
		return;
	}

	if (CurTok.type == COMMA)
	{
		Match(COMMA, "Expected: ',' after argument");
		auto arg = Expr();
		args.push_back(std::move(arg));

		Arg_List_Prime(args);
	}
	else
	{
		throw ParseException("Expected: End of Function Call or New Argument.", CurTok.lineNo, CurTok.columnNo);
	}
}

// arg_list ::= expr arg_list_prime
std::vector<std::unique_ptr<ExprAST>> Arg_List()
{
	std::vector<std::unique_ptr<ExprAST>> args;

	if (ValidExprStart())
	{
		auto expr = Expr();
		args.push_back(std::move(expr));

		Arg_List_Prime(args);
	}
	else
	{
		throw ParseException("Expected: Function Argument.", CurTok.lineNo, CurTok.columnNo);
	}

	return args;
}

// args ::= arg_list |  epsilon
std::vector<std::unique_ptr<ExprAST>> Args()
{
	std::vector<std::unique_ptr<ExprAST>> args;

	if (ValidExprStart())
	{
		args = Arg_List();
	}
	else if (CurTok.type != RPAR)
	{
		throw ParseException("Expected: Function Argument or End of Function Call.", CurTok.lineNo, CurTok.columnNo);
	}

	return args;
}

// rval_term ::= INT_LIT | FLOAT_LIT | BOOL_LIT
std::unique_ptr<ExprAST> Rval_Term()
{
	std::unique_ptr<ExprAST> expr;
	TOKEN lit_tok = CurTok;

	switch (CurTok.type)
	{
	case BOOL_LIT:
	{
		Match(BOOL_LIT, "Expected: bool literal.");

		expr = std::make_unique<BoolAST>(std::move(lit_tok));
		break;
	}
	case FLOAT_LIT:
	{
		Match(FLOAT_LIT, "Expected: float literal.");

		expr = std::make_unique<FloatAST>(std::move(lit_tok));
		break;
	}
	case INT_LIT:
	{
		Match(INT_LIT, "Expected: int literal.");

		expr = std::make_unique<IntegerAST>(std::move(lit_tok));
		break;
	}
	default:
		throw ParseException("Expected: Literal.", CurTok.lineNo, CurTok.columnNo);
	}

	return expr;
}

// rval_ident_prime ::= epsilon | "(" args ")"
std::unique_ptr<ExprAST> Rval_Ident_Prime(TOKEN ident)
{
	std::vector<std::unique_ptr<ExprAST>> args;
	std::unique_ptr<ExprAST> expr;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
	case OR:
	case AND:
	case EQ:
	case NE:
	case LT:
	case GT:
	case LE:
	case GE:
	case PLUS:
	case MOD:
	case DIV:
	case ASTERIX:
	case MINUS:
		expr = std::make_unique<VariableAST>(std::move(ident));
		break;
	case LPAR:
	{
		Match(LPAR, "Expected: '(' before function call.");
		args = Args();
		Match(RPAR, "Expected: ')' after function call.");

		expr = std::make_unique<FuncCallAST>(std::move(ident), std::move(args));
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}

	return expr;
}

// rval_ident ::= IDENT rval_ident_prime | rval_term
std::unique_ptr<ExprAST> Rval_Ident()
{
	std::unique_ptr<ExprAST> expr;

	if (CurTok.type == BOOL_LIT || CurTok.type == FLOAT_LIT || CurTok.type == INT_LIT)
	{
		expr = Rval_Term();
	}
	else if (CurTok.type == IDENT)
	{
		TOKEN ident = GetIdentAndMatch();

		expr = Rval_Ident_Prime(std::move(ident));
	}
	else
	{
		throw ParseException("Expected: Variable, Literal or Function Call.", CurTok.lineNo, CurTok.columnNo);
	}

	return expr;
}

// rval_par ::= "(" expr ")" | rval_ident
std::unique_ptr<ExprAST> Rval_Par()
{
	std::unique_ptr<ExprAST> expr;
	switch (CurTok.type)
	{
	case BOOL_LIT:
	case FLOAT_LIT:
	case INT_LIT:
	case IDENT:
	{
		expr = Rval_Ident();
		break;
	}
	case LPAR:
	{
		Match(LPAR, "Expected: '(' before expression.");
		expr = Expr();
		Match(RPAR, "Expected: ')' after expression.");
		break;
	}
	default:
		throw ParseException("Expected: Start of Expression.", CurTok.lineNo, CurTok.columnNo);
	}

	return expr;
}

// rval_neg ::= "-" rval_neg | "!" rval_neg | rval_par
std::unique_ptr<ExprAST> Rval_Neg()
{
	std::unique_ptr<ExprAST> unary_expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case BOOL_LIT:
	case FLOAT_LIT:
	case INT_LIT:
	case LPAR:
	case IDENT:
	{
		unary_expr = Rval_Par();
		break;
	}
	case NOT:
	{
		Match(NOT, "Expected: '!' operator.");

		auto expr = Rval_Neg();

		unary_expr = std::make_unique<UnaryExprAST>(std::move(Op_Token), std::move(expr));
		break;
	}
	case MINUS:
	{
		Match(MINUS, "Expected: '-' operator.");

		auto expr = Rval_Neg();

		unary_expr = std::make_unique<UnaryExprAST>(std::move(Op_Token), std::move(expr));
		break;
	}
	default:
		throw ParseException("Expected: Start of Expression.", CurTok.lineNo, CurTok.columnNo);
	}

	return unary_expr;
}

// rval_mul_prime ::= "*" rval_neg  | "/" rval_neg  | "%" rval_neg | epsilon
std::unique_ptr<ExprAST> Rval_Mul_Prime(std::unique_ptr<ExprAST> LHS)
{
	// cout << "Rval_Mul_Prime" << endl;
	std::unique_ptr<ExprAST> LHS_Prime;
	std::unique_ptr<ExprAST> RHS;
	std::unique_ptr<ExprAST> expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
	case OR:
	case AND:
	case EQ:
	case NE:
	case LT:
	case GT:
	case LE:
	case GE:
	case PLUS:
	case MINUS:
		expr = std::move(LHS);
		break;
	case MOD:
	{
		Match(MOD, "Expected: '%' operator.");

		LHS_Prime = Rval_Neg();
		RHS = Rval_Mul_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case DIV:
	{
		Match(DIV, "Expected: '/' operator.");

		LHS_Prime = Rval_Neg();
		RHS = Rval_Mul_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case ASTERIX:
	{
		Match(ASTERIX, "Expected: '*' operator.");

		LHS_Prime = Rval_Neg();
		RHS = Rval_Mul_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}
	return expr;
}

// rval_mul ::= rval_neg rval_mul_prime
std::unique_ptr<ExprAST> Rval_Mul()
{
	std::unique_ptr<ExprAST> LHS = Rval_Neg();

	while (CurTok.type == ASTERIX || CurTok.type == MOD || CurTok.type == DIV){
		TOKEN op = CurTok;
		getNextToken();

		auto RHS = Rval_Neg();

		LHS = std::make_unique<BinaryExprAST>(op, std::move(LHS), std::move(RHS));
	}
	
	return Rval_Mul_Prime(std::move(LHS));
}

// rval_add_prime ::= "+" rval_mul  | "-" rval_mul | epsilon
std::unique_ptr<ExprAST> Rval_Add_Prime(std::unique_ptr<ExprAST> LHS)
{
	// cout << "Rval_Add_Prime" << endl;
	std::unique_ptr<ExprAST> LHS_Prime;
	std::unique_ptr<ExprAST> RHS;
	std::unique_ptr<ExprAST> expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
	case OR:
	case AND:
	case EQ:
	case NE:
	case LT:
	case GT:
	case LE:
	case GE:
		expr = std::move(LHS);
		break;
	case PLUS:
	{
		Match(PLUS, "Expected: '+' operator.");

		LHS_Prime = Rval_Mul();
		RHS = Rval_Add_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case MINUS:
	{
		Match(MINUS, "Expected: '-' operator.");

		LHS_Prime = Rval_Mul();
		RHS = Rval_Add_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}
	return expr;
}

// rval_add ::= rval_mul rval_add_prime
std::unique_ptr<ExprAST> Rval_Add()
{
	std::unique_ptr<ExprAST> LHS = Rval_Mul();
	
	while (CurTok.type == PLUS || CurTok.type == MINUS){
		TOKEN op = CurTok;
		getNextToken();

		auto RHS = Rval_Mul();

		LHS = std::make_unique<BinaryExprAST>(op, std::move(LHS), std::move(RHS));
	}

	return Rval_Add_Prime(std::move(LHS));
}

// rval_cmp_prime ::= "<=" rval_add | "<" rval_add | ">=" rval_add | ">" rval_add | epsilon
std::unique_ptr<ExprAST> Rval_Cmp_Prime(std::unique_ptr<ExprAST> LHS)
{
	std::unique_ptr<ExprAST> LHS_Prime;
	std::unique_ptr<ExprAST> RHS;
	std::unique_ptr<ExprAST> expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
	case OR:
	case AND:
	case EQ:
	case NE:
		expr = std::move(LHS);
		break;
	case LT:
	{
		Match(LT, "Expected: '<' operator.");

		LHS_Prime = Rval_Add();
		RHS = Rval_Cmp_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case GT:
	{
		Match(GT, "Expected: '>' operator.");

		LHS_Prime = Rval_Add();
		RHS = Rval_Cmp_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case LE:
	{
		Match(LE, "Expected: '<=' operator.");

		LHS_Prime = Rval_Add();
		RHS = Rval_Cmp_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case GE:
	{
		Match(GE, "Exepcted: '>=' operator.");

		LHS_Prime = Rval_Add();
		RHS = Rval_Cmp_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}
	return expr;
}

// rval_cmp ::= rval_add rval_cmp_prime
std::unique_ptr<ExprAST> Rval_Cmp()
{
	std::unique_ptr<ExprAST> LHS = Rval_Add();
	
	while (CurTok.type == LT || CurTok.type == LE || CurTok.type == GT || CurTok.type == GE){
		TOKEN op = CurTok;
		getNextToken();

		auto RHS = Rval_Add();

		LHS = std::make_unique<BinaryExprAST>(op, std::move(LHS), std::move(RHS));
	}

	return Rval_Cmp_Prime(std::move(LHS));
}

// rval_eq_prime ::= "==" rval_cmp | "!=" rval_cmp | epsilon
std::unique_ptr<ExprAST> Rval_Eq_Prime(std::unique_ptr<ExprAST> LHS)
{
	std::unique_ptr<ExprAST> LHS_Prime;
	std::unique_ptr<ExprAST> RHS;
	std::unique_ptr<ExprAST> expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
	case OR:
	case AND:
		expr = std::move(LHS);
		break;
	case EQ:
	{
		Match(EQ, "Expected: '==' operator.");

		LHS_Prime = Rval_Cmp();
		RHS = Rval_Eq_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	case NE:
	{
		Match(NE, "Expected:'!=' operator.");

		LHS_Prime = Rval_Cmp();
		RHS = Rval_Eq_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}

	return expr;
}

// rval_eq ::= rval_cmp rval_eq_prime
std::unique_ptr<ExprAST> Rval_Eq()
{
	std::unique_ptr<ExprAST> LHS = Rval_Cmp();
	
	while (CurTok.type == EQ || CurTok.type == NE){
		TOKEN op = CurTok;
		getNextToken();

		auto RHS = Rval_Cmp();

		LHS = std::make_unique<BinaryExprAST>(op, std::move(LHS), std::move(RHS));
	}

	return Rval_Eq_Prime(std::move(LHS));
}

// rval_and_prime ::= "&&" rval_eq rval_and_prime | epsilon
std::unique_ptr<ExprAST> Rval_And_Prime(std::unique_ptr<ExprAST> LHS)
{
	std::unique_ptr<ExprAST> LHS_Prime;
	std::unique_ptr<ExprAST> RHS;
	std::unique_ptr<ExprAST> expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
	case OR:
		expr = std::move(LHS);
		break;
	case AND:
	{
		Match(AND, "Expected: '&&' operator.");

		LHS_Prime = Rval_Eq();
		RHS = Rval_And_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}
	return expr;
}

// rval_and ::= rval_eq rval_and_prime
std::unique_ptr<ExprAST> Rval_And()
{
	std::unique_ptr<ExprAST> LHS = Rval_Eq();

	while (CurTok.type == AND){
		TOKEN op = CurTok;
		getNextToken();

		auto RHS = Rval_Eq();

		LHS = std::make_unique<BinaryExprAST>(op, std::move(LHS), std::move(RHS));
	}
	
	return Rval_And_Prime(std::move(LHS));
}

// rval_or_prime ::= "||" rval_and rval_or_prime | epsilon
std::unique_ptr<ExprAST> Rval_Or_Prime(std::unique_ptr<ExprAST> LHS)
{
	std::unique_ptr<ExprAST> LHS_Prime;
	std::unique_ptr<ExprAST> RHS;
	std::unique_ptr<ExprAST> expr;
	TOKEN Op_Token = CurTok;

	switch (CurTok.type)
	{
	case COMMA:
	case RPAR:
	case SC:
		expr = std::move(LHS);
		break;
	case OR:
	{
		Match(OR, "Expected: '||' operator.");

		LHS_Prime = Rval_And();
		RHS = Rval_Or_Prime(std::move(LHS));

		expr = std::make_unique<BinaryExprAST>(std::move(Op_Token), std::move(LHS_Prime), std::move(RHS));
		break;
	}
	default:
		throw ParseException("Expected: One Of [',' New Argument, ')' End of Arguments, ';' End of Expression] or Operation.", CurTok.lineNo, CurTok.columnNo);
	}

	return expr;
}

// rval_or ::= rval_and rval_or_prime
std::unique_ptr<ExprAST> Rval_Or()
{
	std::unique_ptr<ExprAST> LHS = Rval_And();
	
	while (CurTok.type == OR){
		TOKEN op = CurTok;
		getNextToken();

		auto RHS = Rval_And();

		LHS = std::make_unique<BinaryExprAST>(op, std::move(LHS), std::move(RHS));
	}

	return Rval_Or_Prime(std::move(LHS));
}

// expr ::= IDENT "=" expr | rval_or
std::unique_ptr<ExprAST> Expr()
{
	std::unique_ptr<ExprAST> expr;

	switch (CurTok.type)
	{
	case BOOL_LIT:
	case FLOAT_LIT:
	case INT_LIT:
	case LPAR:
	case NOT:
	case MINUS:
	{
		expr = Rval_Or();
		break;
	}
	// Non LL(1) production
	// Must use extra look-ahead
	case IDENT:
	{
		TOKEN NextTok = PeekToken();

		if (NextTok.type == ASSIGN)
		{
			TOKEN ident = GetIdentAndMatch();

			Match(ASSIGN, "Expected: '=' after variable identifer.");

			auto var_expr = Expr();

			expr = std::make_unique<VariableAssignmentAST>(std::move(ident), std::move(var_expr));
		}
		else
		{
			expr = Rval_Or();
		}

		break;
	}
	case SC:
	{
		Match(SC, "Expected: ';'.");
		break;
	}
	default:
		throw ParseException("Expected: Assignment or Start of Expression.", CurTok.lineNo, CurTok.columnNo);
	}
	return expr;
}

// return_stmt_prime ::= ";" | expr ";"
std::unique_ptr<ReturnAST> Return_Stmt_Prime()
{
	std::unique_ptr<ExprAST> expr;
	TOKEN returnTok; 
	if (ValidExprStart())
	{
		expr = Expr();

		returnTok = CurTok;
		Match(SC, "Expected: ';' after return expression.");
	}
	else if (CurTok.type == SC)
	{
		returnTok = CurTok;
		Match(SC, "Expected: ';' after return keyword.");
	}
	else
	{
		throw ParseException("Expected: Start of expression.", CurTok.lineNo, CurTok.columnNo);
	}

	return std::make_unique<ReturnAST>(std::move(expr), std::move(returnTok));
}

// return_stmt ::= "return" return_stmt_prime
std::unique_ptr<ReturnAST> Return_Stmt()
{
	std::unique_ptr<ReturnAST> return_stmt;

	if (CurTok.type == RETURN)
	{
		Match(RETURN, "Expected: 'return' keyword.");
		return_stmt = Return_Stmt_Prime();
	}
	else
	{
		throw ParseException("Expected: 'return' keyword.", CurTok.lineNo, CurTok.columnNo);
	}

	return return_stmt;
}

// else_stmt  ::= "else" block | epsilon
std::unique_ptr<BlockAST> Else_Stmt()
{
	std::unique_ptr<BlockAST> else_block;

	switch (CurTok.type)
	{
	case BOOL_LIT:
	case FLOAT_LIT:
	case INT_LIT:
	case LPAR:
	case NOT:
	case MINUS:
	case IDENT:
	case SC:
	case RETURN:
	case IF:
	case WHILE:
	case LBRA:
	case RBRA:
		break;
	case ELSE:
	{
		Match(ELSE, "Expected: 'else' keyword after if statement.");
		else_block = Block();
		break;
	}
	default:
		throw ParseException("Expected: Else block of IF Statment or New Valid Statement.", CurTok.lineNo, CurTok.columnNo);
	}

	return else_block;
}

// if_stmt ::= "if" "(" expr ")" block else_stmt
std::unique_ptr<IfAST> If_Stmt()
{
	std::unique_ptr<ExprAST> condition_expr;
	std::unique_ptr<BlockAST> true_block;
	std::unique_ptr<BlockAST> else_block;

	if (CurTok.type == IF)
	{
		Match(IF, "Expected: 'if' keyword.");
		Match(LPAR, "Expected: '(' before if condition.");
